--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h3 class="u-text u-text-default u-text-1">LACUL DE ARGINT</h3>
                 <p class="u-text u-text-default u-text-2"> Luni - Duminica&nbsp; 09:00 - 22:00<br>
                 </p>
-                <h5 class="u-text u-text-3">+1 232 454 55 44</h5>
+                <h5 class="u-text u-text-3">+40 723 911 240</h5>
               </div>
             </div>
           </div>
